--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Author URL: http://w3layouts.com
 			<div class="wrapper">
 				<div class="logo-center">
 					<a class="logo" href="index.html">
-						<span class="fa fa-glass"></span> Hotel
+						<span class="fas fa-laptop-code"></span> Muralidharan M
 					</a>
 				</div>
 				<!-- if logo is image enable this   
