--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Author URL: http://w3layouts.com
 <html lang="zxx">
 
 <head>
-	<title>Hotel Coming Soon Responsive Widget Template : W3layouts</title>
+	<title>Mass murali Tirupattur</title>
 	<!-- Meta tag Keywords -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
@@ -75,8 +75,8 @@ Author URL: http://w3layouts.com
 				<!-- copyright -->
 				<div class="copyright-footer">
 					<div class="w3l-copy-right">
-						<p>© 2020 Hotel Coming Soon. All rights reserved | Design by
-							<a href="http://w3layouts.com/" target="_blank">W3layouts</a></p>
+						<p>© 2021 Muralidharan M | Design by
+							Mass Murali, Tirupattur</p>
 					</div>
 				</div>
 				<!-- //copyright -->
