--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Author URL: http://w3layouts.com
 					<!-- countdown -->
 
 					<div class="contact-button">
-						<a href="#contact" class="btn">Contact Us</a>
+						<a href="#contact" class="btn">Contact: 9566469741</a>
 					</div>
 				</div>
 				<!-- copyright -->
